# midnight_library

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  init_db.sh
.github/workflows/: rust.yml
.sqlx/: query-0e16ee9d09527f854a5d3e89486a66344e9cf491ecf86d392bb19284fefdb166.json  query-1bfb70714a273fbe1169a6d5b41068f450b1dd4f73116d4521f5346f6253cabf.json  query-39fa7c09ad021f64bbe0af00bed9e7bf4c75e8805930c2989255c06468abe846.json  query-3f7ff7dbd0a9f2496f8987a32cfcd8189b9f866e298c7b49b00dc5c5faf8dad2.json  query-864c30aa38e56c365b092a1c636ee48fe75600f520ba1190fd7ab1a35fc84b6f.json  query-9a34f90c01b1465e1574779352fc268a7de577b1d25574a3154ed825c5257963.json  query-a02ff0f9b6ce4f31fb95fb1c8d3178448e21257994cd4411f40ddb61e29cf9fb.json  query-aa6e5c3ed532ac0493547d70b7c66162bf68aa5b3929fa3a98bd53176c310526.json  query-b2ff9013651c3e8ae0ec3900e243576b572d982b0aac5b40c3b27f5eb27f99c0.json  query-c532ed4fa0f74801b1985fcc8cbcbded60b69de8eb6bc709bc4b9d31cb5d6cde.json  query-fc932b32428ae216e756354416c0226d81ce68321c8aeece05c1fcd5c62e7971.json
migrations/: 20240305163247_create_books_table.sql  20240307113156_create_authors_table.sql  20240307113327_add_author_to_books_table.sql  20240322200358_create_users_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/models/: author.rs  book.rs  mod.rs
src/routes/: authors.rs  books.rs  mod.rs  users.rs
src/validations/: author.rs  book.rs  user.rs
tests/: authors.rs  books.rs  health_check.rs  users.rs
tests/api/: authors.rs  books.rs  health_check.rs  main.rs  test_helpers.rs  users.rs
