[package]
name = "bookstore_api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bookstore_api"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["clock", "serde"], default-features = false }
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = "0.11.24"
